# phishing-detection

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: another_test.ipynb  test.ipynb
phishing_detection/: __init__.py  config.py  dataset.py  features.py  plots.py
phishing_detection/modeling/: predict.py  train.py
