[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "phishing_detection"
version = "0.0.1"
description = "Phishing Detection"
authors = [
  { name = "Lavrentiy Naumovich" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["phishing_detection"]
include = ["pyproject.toml", "phishing_detection/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["phishing_detection"]
force-sort-within-sections = true

